[package]
name = "remacs-macros"
version = "0.1.0"
description = "Procedural macro used to generate definitions for lisp native functions."
edition = "2018"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "*"
quote = "0.5"
syn = { version = "0.15", features = ["full", "extra-traits"] }
regex = "0.2"
lazy_static = "1.0"

[dev-dependencies]
proc-macro2 = "*"
syn = { version = "0.15", features = ["full", "extra-traits"] }
