[package]
name = "remacs-util"
version = "0.1.0"
description = "Common utility code linked by other remacs crates."
edition = "2018"

[dependencies]
devise = "0.2"
errno = "0.2"
libc = "0.2"
proc-macro2 = "*"
quote = "0.6"

[lib]
path = "lib.rs"

[features]
# Treat warnings as a build error on Travis.
strict = []
