[package]
name = "remacs-util"
version = "0.1.0"
description = "Common utility code linked by other remacs crates."
edition = "2018"

[dependencies]
libc = "0.2"
errno = "0.2"
darling = "*"
syn = { version = "0.15.25", features = ["full", "extra-traits"] }

[lib]
path = "lib.rs"

[features]
# Treat warnings as a build error on Travis.
strict = []

[profile.release]
panic = "abort"
lto = true

[profile.dev]
panic = "abort"
lto = true
